--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
- 
 * {
   margin: 0;
   padding: 0;
@@ -6,6 +5,9 @@
 }
 
 .overall {
+  /* width: 100vw;
+  height: fit-content;
+  min-height: 100vh; */
   box-sizing: border-box;
 }
 
@@ -46,6 +48,7 @@
   width: 100vw;
   height: 100vh;
 }
+
 
 .header {
   left: 0;
@@ -122,6 +125,7 @@
 }
 
 .big-card img {
+  /* display: block; */
   width: 100%;
 }
 
@@ -253,6 +257,7 @@ footer {
 
 .footer-column li {
   margin-bottom: 15px;
+  
 }
 
 .footer-column a {
@@ -314,6 +319,7 @@ footer {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
     display: flex;
     /* flex-direction: column; */
     flex-wrap: wrap;
@@ -331,7 +337,6 @@ footer {
     font-weight: bolder;
     text-align: center;
   }
-
   .big-latest .small-card {
     width: 100%;
   }
