--- a/details.css
+++ b/details.css
@@ -81,7 +81,33 @@ h2 {
 
 
 
-
+.instruction-list {
+  list-style-type: none;
+  padding-left: 0;
+}
+  
+.instruction-list li {
+  position: relative;
+  margin-bottom: 10px;
+  padding-left: 50px;
+}
+  
+.instruction-list li:before {
+  content: counter(step-counter);
+  counter-increment: step-counter;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translate(50%, -50%);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #f4a00f;
+  color: #fff;
+  text-align: center;
+  line-height: 30px;
+  font-weight: bold;
+}
 
 .nutrition-table {
   max-width: 600px;
@@ -142,6 +168,7 @@ th {
 .big-card-text h6 {
   font-size: 12px;
   color: #fa8d08;
+  margin-left: 8px;
 }
 
 .big-card-text h4 {
