created the video display screen and the the four column below it

--- a/details.css
+++ b/details.css
@@ -3,7 +3,13 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+#myVideo {
+    width: 100%;
+    height: auto;
+    max-width: 640px;
+    display: block;
+    margin: 0 auto;
+  }
 
 
 
@@ -67,8 +73,6 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-weight: bold;
-  color: #fff;
   margin-left: 10px;
 }
 
@@ -85,13 +89,13 @@ h2 {
   list-style-type: none;
   padding-left: 0;
 }
-  
+
 .instruction-list li {
   position: relative;
   margin-bottom: 10px;
   padding-left: 50px;
 }
-  
+
 .instruction-list li:before {
   content: counter(step-counter);
   counter-increment: step-counter;
